@@ -19,6 +19,7 @@ requires 'Filesys::DfPortable';
 requires 'Data::Entropy';
 requires 'Crypt::SaltedHash';
 requires 'Data::Validate::URI';
+requires 'Term::ProgressBar';
 
 feature 'ldap', 'LDAP authentication support' => sub {
     requires 'Net::LDAP';
