@@ -13,6 +13,7 @@ Revision history for Lufi
 	- Add report file link in the navbar
 	- Allow to choose your language
 	- Use a recurrent task to provision shorts
+	- Add a command to migrate data from SQLite to an other database
 
 0.02.2 2017-09-18
 	- Fix cron tasks bug
